--- a/CodeBarraWeb/CodeBarraWeb.csproj
+++ b/CodeBarraWeb/CodeBarraWeb.csproj
@@ -178,11 +178,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ReportePenController.cs" />
-    <Compile Include="Models\LoginController.cs" />
     <Compile Include="Controllers\ReporteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\ReporteProduccionModelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
